<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CleanX</string>
    <string name="request_root_message">The main features are implemented based on Root permission, program is open source, address：&lt;a href="https://github.com/xtvj/cleanx">https://github.com/xtvj/cleanx&lt;/a>,Want to grant permissions?</string>
    <string name="request_root_ok">manual setting</string>
    <string name="request_root_cancel">Cancel</string>
    <string name="no_data">No data</string>
    <string name="dialog_open">Open</string>
    <string name="dialog_share">Extract APK</string>
    <string name="dialog_system_info">System Info</string>
    <string name="dialog_uninstall">Uninstall</string>
    <string name="app_no_intent">program has no startup item.</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="stop">Forced stop</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="version">Version：</string>
    <string name="update_time">update：</string>
    <string name="share_apk">Share Apk</string>
    <string name="need_to_open_root">If already obtained permission, please restart the APP</string>
    <string name="user_app">User applications</string>
    <string name="system_app">System applications</string>
    <string name="disabled_app">Disabled</string>
    <string name="dark_model">Dark model</string>
    <string name="got_root">Obtained root permission</string>
    <string name="setting">Setting</string>
    <string name="stop_success">Stopped successfully</string>
    <string name="stop_failed">Stop failed</string>
    <string name="can_not_open">Cannot open </string>
    <string name="setting_auto">auto</string>
    <string name="setting_light">light</string>
    <string name="setting_night">night</string>
    <string name="setting_pkg_name">package name</string>
    <string name="setting_app_name">app name</string>
    <string name="setting_update_time">last update time</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_list">App list settings</string>
    <string name="setting_sort_by">Sort by</string>
    <string name="refresh_done">Refreshed</string>
    <string name="about">About</string>
    <string name="version_setting">Version</string>
    <string name="project_address">Open source address</string>
    <string name="third_party_licenses">Third party licenses</string>
    <string name="refresh_success">Refresh Success</string>
    <string name="filters">Filters</string>
    <string name="disabled_or_not">Disabled or not</string>
    <string name="all">All</string>
    <string name="is_disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="is_running">Is running</string>
    <string name="running">Running</string>
    <string name="not_running">Not Running</string>
    <string name="list_sorting">List sorting</string>
    <string name="positive">Positive</string>
    <string name="reverse">Reverse</string>
    <string name="select_all">All</string>
    <string name="reverse_select">Invert</string>
</resources>