<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_stop"
        android:icon="@drawable/ic_menu_stop"
        android:title="@string/stop"
        android:titleCondensed="@string/stop"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_enable"
        android:icon="@drawable/ic_menu_enable"
        android:title="@string/enable"
        android:titleCondensed="@string/enable"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_disable"
        android:icon="@drawable/ic_menu_disable"
        android:title="@string/disable"
        android:titleCondensed="@string/disable"
        app:showAsAction="ifRoom" />

</menu>