<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_20dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="@dimen/size_10dp"
        app:cardElevation="@dimen/size_20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16dp"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginEnd="@dimen/size_16dp"
                android:text="@string/disabled_or_not"
                android:textSize="@dimen/text_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_menu_main"
                style="@style/Widget.MaterialComponents.TabLayout.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16dp"
                android:layout_marginTop="@dimen/size_16dp"
                android:layout_marginEnd="@dimen/size_16dp"
                android:minWidth="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView"
                app:tabGravity="fill"
                app:tabIndicatorAnimationMode="elastic"
                app:tabIndicatorGravity="bottom"
                app:tabMode="fixed"
                app:tabTextAppearance="@style/CustomTabText">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_pop_all"
                    android:text="@string/all" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_menu_disable"
                    android:text="@string/is_disabled" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_menu_enable"
                    android:text="@string/enabled" />
            </com.google.android.material.tabs.TabLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/size_8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tab_menu_main" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16dp"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginEnd="@dimen/size_16dp"
                android:text="@string/is_running"
                android:textSize="@dimen/text_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_menu_main2"
                style="@style/Widget.MaterialComponents.TabLayout.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16dp"
                android:minWidth="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView2"
                app:tabGravity="fill"
                app:tabIndicatorGravity="bottom"
                app:tabTextAppearance="@style/CustomTabText">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_pop_all"
                    android:text="@string/all" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_pop_running"
                    android:text="@string/running" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_pop_stop"
                    android:text="@string/not_running" />
            </com.google.android.material.tabs.TabLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/size_8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tab_menu_main2" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16dp"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginEnd="@dimen/size_16dp"
                android:text="@string/list_sorting"
                android:textSize="@dimen/text_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_menu_main3"
                style="@style/Widget.MaterialComponents.TabLayout.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16dp"
                android:minWidth="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView3"
                app:tabGravity="fill"
                app:tabIndicatorGravity="bottom"
                app:tabTextAppearance="@style/CustomTabText">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_pop_positive"
                    android:text="@string/positive" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_pop_reverse"
                    android:text="@string/reverse" />
            </com.google.android.material.tabs.TabLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.core.widget.NestedScrollView>